# bigdatacorp-wrapper

./: .gitignore  .template-env  README.md  pyproject.toml  requirements.txt
bigdatacorp_wrapper/: company.py  partner.py
tests/: test_bigdatacorp_wrapper.py
